--- a/introduction.tex
+++ b/introduction.tex
@@ -4,10 +4,10 @@
 
 This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head, i.e. headless relatives.
 
-I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. I let this follow from what we observe in morphology. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
-
-Case competition in headless relatives has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that case competition in headless relatives is actually more wide-spread than what has been assumed.
-%%this is too difficult
+% I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. I let this follow from what we observe in morphology. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
+%
+% Case competition in headless relatives has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that case competition in headless relatives is actually more wide-spread than what has been assumed.
+% %%this is too difficult
 
 In this introduction I first introduce what I mean exactly with case competition in headless relatives. Then I introduce the topics I discuss in this dissertation.
 
@@ -16,7 +16,7 @@ In this introduction I first introduce what I mean exactly with case competition
 
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called subject of the predicate \tit{mögen} `to like' is marked as nominative. What can be described as object of \tit{mögen} `to like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called the subject of the predicate \tit{mögen} `to like' is marked as nominative. What can be described as the object of \tit{mögen} `to like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
 In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mögen} `to like'.
 In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mögen} `to like'.
 
@@ -46,12 +46,12 @@ Compare the two sentences in \ref{ex:german-relatives}. In both sentences the he
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-Even though Modern German also has case competition in headless relatives, I turn to Gothic now. The first part of the dissertation can be illustrated best with Gothic, and not with the Modern German, in which the pattern differs slightly.
+Even though Modern German also has case competition in headless relatives, I turn to Gothic now. The patterns among the two languages differ slightly, and the first part of the dissertation can be illustrated best with Gothic.
 
 I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}.
 There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arman} `to pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarman} `to pity' also takes accusative objects, indicated again by the subscript.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}' appears in accusative case.\footnote{
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
@@ -59,15 +59,15 @@ The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Theref
  pity.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} pity.\ac{pres}.1\ac{sg}\scsub{[acc]}\\
  `I pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
-Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
+Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity'. From now on, I use the terms internal and external case to refer to these two possible case sources. Now there are three logical possibilities for the source of the accusative case on \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' in \ref{ex:gothic-acc-acc}: the internal case, the external case, or both.
 
 Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arman} `to pity'. The predicate \tit{arman} `to pity' takes accusative objects. So, the internal case is accusative.
 
 External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarman} `to pity'. The predicate \tit{gaarman} `to pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
 
-Now I return to the question where \tit{þan(a)} in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
+Now I return to the question where \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
 This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected on a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
-Later on I will argue that this indirect process is ellipsis.
+Later on I will argue that this indirect process is actually a deletion operation.
 }
 This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothic-acc-acc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
@@ -85,7 +85,7 @@ The conclusion that follows is that the relative pronoun can take the internal c
 Now consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects, as indicated by the subscript on the predicate.
 The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects, as indicated by the subscript on the predicate.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \ac{rel}.\ac{acc}.\ac{sg}.\ac{n} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
@@ -109,37 +109,37 @@ The first one is which case is going to win the case competition, i.e. which cas
 The second question is whether both competitors are able to compete in the competition, i.e. whether one of the cases is surfacing or both are ungrammatical. I discuss this in Part \ref{part:direction}.
 For both I will show that morphology is leading. What we observe in syntax is a reflex of the morphology.
 
-In Part \ref{part:complexity} I discuss the pattern observed in headless relatives in Gothic. This pattern has also been described for German, Greek, etc. etc. references references.
-The pattern that arises in headless relatives is not restricted to headless relatives. It can also be observed in another syntactic phenomenon: the accessiblity hierarchy. This is..
-Lastly: the pattern we observe in these two syntactic phenomena is what we know from morphology. I discuss patterns in morphology: formal containment, syncretism patterns, suppletion patterns.
-
-In Part \ref{part:complexity} I discuss an aspect of headless relatives that differs per language. That is, not all languages act like Gothic.
-
-\ex. Modern German
-\ag. accusative dative\\
- \\
- `'
-\bg. dative accusative\\
- \\
- `'
-
- \ex. Old High German
- \ag. accusative dative\\
-  \\
-  `'
- \bg. dative accusative\\
-  \\
-  `'
-
-  \ex. Italian
-  \ag. accusative dative\\
-   \\
-   `'
-  \bg. dative accusative\\
-   \\
-   `'
-
-So far people said..
-I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
-
-In Part \ref{part:details} I show how all of this can be derived in derivations.
+% In Part \ref{part:complexity} I discuss the pattern observed in headless relatives in Gothic. This pattern has also been described for German, Greek, etc. etc. references references.
+% The pattern that arises in headless relatives is not restricted to headless relatives. It can also be observed in another syntactic phenomenon: the accessiblity hierarchy. This is..
+% Lastly: the pattern we observe in these two syntactic phenomena is what we know from morphology. I discuss patterns in morphology: formal containment, syncretism patterns, suppletion patterns.
+%
+% In Part \ref{part:complexity} I discuss an aspect of headless relatives that differs per language. That is, not all languages act like Gothic.
+%
+% \ex. Modern German
+% \ag. accusative dative\\
+%  \\
+%  `'
+% \bg. dative accusative\\
+%  \\
+%  `'
+%
+%  \ex. Old High German
+%  \ag. accusative dative\\
+%   \\
+%   `'
+%  \bg. dative accusative\\
+%   \\
+%   `'
+%
+%   \ex. Italian
+%   \ag. accusative dative\\
+%    \\
+%    `'
+%   \bg. dative accusative\\
+%    \\
+%    `'
+%
+% So far people said..
+% I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
+%
+% In Part \ref{part:details} I show how all of this can be derived in derivations.
