--- a/thesis.tex
+++ b/thesis.tex
@@ -45,7 +45,8 @@
 \include{recurring-pattern}
 \include{case-decomposition}
 
-\part{Different types of relative pronouns}\label{part:direction}
+
+\part{``Relative'' pronouns}\label{part:direction}
 \include{ohg-examples}
 \include{variation}
 \include{morphology-syntax}
