--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -240,7 +240,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
      \label{tbl:agr-typo}
  \end{table}
 
-It is often the case that subjects appear in nominative case, and that direct objects appear in accusative. However, this is not always the case. Subjects can be non-nominative and direct objects can be non-accusative. \citet{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. \citeauthor{bobaljik2006} gives examples of two types of situations in which grammatical function and morphological case do not match: non-nominative subjects in Icelandic and ergative-absolutive languages. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. I go through both situations \citeauthor{bobaljik2006} describes.
+\citet{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. It is often the case that subjects appear in nominative case, and that direct objects appear in accusative. However, this is not always the case. Subjects can be non-nominative and direct objects can be non-accusative. \citeauthor{bobaljik2006} gives examples of two types of situations in which this is the case: non-nominative subjects in Icelandic and ergative-absolutive languages. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. I go through both situations \citeauthor{bobaljik2006} describes.
 
 Icelandic is a language that has dative subjects. It is like German in that it only shows agreement with a single argument. If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate. This is not what happens, as illustrated in \ref{ex:icelandic-dat-subj}. The dative subject \tit{morgum studentum} `many students' is plural. The sentence is ungrammatical with the predicate \tit{líka} `like' inflecting for plural as well. So, the dative subject does not agree in number with the predicate. In other words, it is not the grammatical subject that shows agreement.
 
@@ -312,9 +312,9 @@ Note here that nominative-accusative languages use the same case marking for the
 
 This formulation in terms of case rather than grammatical function works as follows for the examples I gave earlier.
 First, Japanese is a language that does not show any agreement, as shown in \ref{ex:japanese-agr}. There is no agreement with the unmarked case (here the nominative), not with the dependent case (here the accusative) and not with the dative case.
-Second, German is a language that shows agreement only with the unmarked case, as shown in \ref{ex:german-agr}. The morpheme \tit{-st} on the predicate agrees with the element in default nominative case \tit{du} `you'. There is no agreement with the dependent accusative case or with the dative case.
-Third, Hungarian is a language that shows agreement with the default and the dependent case, as shown in \ref{ex:hungarian-agr}. The portmanteau morpheme \tit{-om} on the predicates agrees with the element in default nominative case \tit{én} `I' and the element in dependent accusative case \tit{a könyvet} `the book'.
-Last, Basque is a language that shows agreement with the default, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in dependent ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in default absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in dative case \tit{niri} `me'.
+Second, German is a language that shows agreement only with the unmarked case, as shown in \ref{ex:german-agr}. The morpheme \tit{-st} on the predicate agrees with the element in unmarked nominative case \tit{du} `you'. There is no agreement with the dependent accusative case or with the dative case.
+Third, Hungarian is a language that shows agreement with the unmarked and the dependent case, as shown in \ref{ex:hungarian-agr}. The portmanteau morpheme \tit{-om} on the predicates agrees with the element in unmarked nominative case \tit{én} `I' and the element in dependent accusative case \tit{a könyvet} `the book'.
+Last, Basque is a language that shows agreement with the unmarked, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in dependent ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in unmarked absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in dative case \tit{niri} `me'.
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
@@ -349,7 +349,7 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 \citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
 \citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
 }
-The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
+The implicational hierarchy is schematically represented in Figure \ref{fig:rel-sub-do-io}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
 \begin{figure}[ht]
   \centering
@@ -362,12 +362,12 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rela
     \node[] at (0,1.5) {direct object};
     \node[align=center] at (0,0) {indirect\\ object};
 
-    \node[] at (2.25,2) {\footnotesize{● Malagasy}};
+    \node[] at (2.25,2) {\footnotesize{● Malagasy/German}};
     \node[] at (2,1) {\footnotesize{● Malay}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
   \caption{Schema for relativization}
-  \label{fig:relativization}
+  \label{fig:rel-sub-do-io}
 \end{figure}
 
 There are four types of languages possible: first, a language that allows only the subject to be relativized with a particular strategy and not the direct and indirect object; second, a language that allows the subject and direct object to be relativized with a particular strategy but not the indirect object; and third, a language that allows the subject, the direct object and the indirect object to be relativized with a particular strategy.
@@ -430,6 +430,18 @@ The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io1} in that 
 \bg. *\tbf{perempuan} \tbf{kapada} yang Ali beri {ubi kentang} itu\\
  woman to who Ali give potato that\\\flushfill{Malay, \pgcitealt{keenan1977}{71}, my boldfacing}\label{ex:malay-no-io2}
 
+% Later in this section I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
+% Finnish is another example..
+%
+%  (12) a. Poydalla tanssinut poika oli sairas.
+%  on-table having-danced boy was sick
+%  'The boy who had danced on the table was sick.'
+%  b. Nakemani poika tanssi poydalla.
+%  I-having-seen boy danced on-table
+%  'The boy that I saw danced on the table.'
+
+
+
 Basque is an example of a language that has a particular relativization strategy for subjects, direct objects and indirect objects. \ref{ex:basque-decl} is an example of a declarative ditransitive sentence in Basque. The sentence contains the subject \tit{gizonak} `the man', the direct object \tit{liburua} `the book' and the indirect object \tit{emakumeari} `the woman'.
 
 \exg. Gizon-a-k emakume-a-ri liburu-a eman dio.\\
@@ -458,8 +470,10 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}, my boldfacing}\label{ex:basque-io}
 
-\citet{caha2009} restates the implicational hierarchy in terms of case. Subject corresponds to nominative, direct object corresponds to accusative, and indirect object corresponds to dative.
-%same argument as bobaljik, when there is a mismatch between case and grammatical function, case wins
+\citet{caha2009} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. The main argument comes from ergative-absolutive languages, which was also one of \posscitet{bobaljik2006} argument with the implicational hierarchy for agreement. \citet{keenan1977} point out that some ergative-absolutive languages form a counterexample to their hierarchy. \citet{caha2009} points out that ergative subjects and oblique noun phrases use the same relativization strategy, which is not allowed with absolutive objects (which is also briefly mentioned in
+\citealt{bobaljik2006}).
+
+Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
 \begin{figure}[ht]
   \centering
@@ -472,13 +486,21 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
     \node[] at (0,1.5) {dependent case};
     \node[align=center] at (0,0) {dative};
 
-    \node[] at (2.25,2) {\footnotesize{● Malagasy}};
+    \node[] at (2.25,2) {\footnotesize{● Malagasy/German}};
     \node[] at (2,1) {\footnotesize{● Malay}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
   \caption{Schema for relativization}
-  \label{fig:relativization-def-dep-dat}
+  \label{fig:rel-def-dep-dat}
 \end{figure}
+
+This formulation in terms of case rather than grammatical function works as follows for the examples I gave earlier.
+
+First, German is a language that has a particular relativization strategy for the unmarked case, as shown in \ref{ex:german-rel-subj}. The unmarked nominative case can be relativized with a reduced relative clause, but the dependent accusative case and the dative case cannot.
+Second,
+Last, Basque is a language that has a particular relativization strategy for unmarked, dependent and dative case, as shown in \ref{ex:basque-rel}. The unmarked ergative, dependent absolutive and dative case can be relativized by extraposing the head, and marking it with the invariable marker \tit{-n}.
+
+In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:rel-nom-acc-dat} suffices.
 
 \begin{figure}[ht]
   \centering
@@ -492,10 +514,11 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
     \node[align=center] at (0,0) {dative};
   \end{tikzpicture}
   \caption{Schema for relativization}
-  \label{fig:relativization-nom-acc-dat}
+  \label{fig:rel-nom-acc-dat}
 \end{figure}
 
-Again, the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed.
+In sum, this section has shown that relativization follows the same implicational hierarchy as agreement and as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
+
 
 \section{In morphology}\label{sec:case-morphology}
 
