--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -6,7 +6,7 @@ This chapter introduces the pattern that forms the focus of the first part of th
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-intro}
 
-Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also shows up in morphological patterns. It can be observed in patterns of syncretism and in morphological containment.
+Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also appears in morphological patterns. It can be observed in patterns of syncretism and in morphological containment.
 
 
 \section{In headless relatives}\label{sec:pattern-rels}
@@ -17,13 +17,13 @@ In the literature about headless relatives, the genitive is often discussed toge
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
-This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. When two cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic.
+This can be reformulated as follows. In a competition, accusative wins over nominative, dative wins over nominative, and dative wins over accusative. In this section I illustrate this scale with examples. When two cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic.
 
-The description of Gothic is mostly based on \citep{harbert1978}. The spelling (if differing) follows the Wulfila Project website.\footnote{
+The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
 <http://www.wulfila.be>
-} The glossing and translations are modified from \citeauthor{harbert1978}. The glossing follows the information on the Wulfila Project website. The translations are my own.
+} The glossing comes from the detailed tagging on that same website. The translations are my own.
 
-I end with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
+I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects.
@@ -71,14 +71,10 @@ I end with the competition between dative and accusative. Following the case sca
 
 Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative.
 The internal case is dative. The preposition \tit{ana} `on' takes dative complements.\footnote{
-Throughout the dissertation I give examples in which the case is assigned to the relative pronoun (or the absent head) by a verbal predicate. The reason for that is to keep the data set as homogenous as possible. \citet{harbert1978} reports there is no such example with the dative as internal case and the accusative as external case. My own research reaches the same conclusion.
-
-The absence of this example is not surprising, mainly for two reasons. First, the headless relative construction is infrequent to begin with. \citeauthor{harbert1978} reports of some case competition combinations only a single or a few occurrences.
+The example in \ref{ex:gothic-acc-dat} differs from the other examples of headless relatives. In this example, it is a preposition that assigns a particular case to the relative pronoun. So far, I have only given examples in which it is a verbal predicate that assigns a case to the relative pronoun (or the absent head). The reason for that is to keep the data set as homogenous as possible. \citet{harbert1978} reports there is no such example with the dative as internal case and the accusative as external case. My own research reaches the same conclusion. The absence of a headless relative with an internal dative case and an external accusative case (both assigned by verbal predicates) is not surprising, mainly for two reasons. First, the headless relative construction is infrequent to begin with. \citeauthor{harbert1978} reports of some case competition combinations only a single or a few occurrences.
 Second, Gothic only has a few verbs that take dative complements.
 
-There is reason to believe that this missing occurrence is due to the above mentioned reasons rather than a meaningful gap in the paradigm. Datives often appear after prepositions. There are instances in which the internal dative case is assigned by a preposition and the external accusative case is assigned by a verbal predicate. In each of these instances, the relative pronoun surfaces in the internal dative case and not in the external accusative case (as in \ref{ex:gothic-acc-dat}). For the other way around holds the same: with an accusative internal case assigned by a verbal predicate and a dative external predicate assigned by a preposition, the relative pronoun surfaces in the dative and not in the accusative.
-
-Therefore, the system that I set up later in this dissertation is able to generate the dative as internal case and accusative as external case which are both assigned by verbal predicates.
+There is reason to believe that this missing occurrence is due to the above mentioned reasons rather than a meaningful gap in the paradigm. Datives often appear after prepositions. There are instances in which the internal dative case is assigned by a preposition and the external accusative case is assigned by a verbal predicate. In each of these instances, the relative pronoun surfaces in the internal dative case and not in the external accusative case (as in \ref{ex:gothic-acc-dat}). For the other way around holds the same: with an accusative internal case assigned by a verbal predicate and a dative external predicate assigned by a preposition, the relative pronoun surfaces in the dative and not in the accusative. Therefore, the system that I set up later in this dissertation is able to generate the dative as internal case and accusative as external case which are both assigned by verbal predicates.
 }\footnote{
 \tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
 }
@@ -105,21 +101,22 @@ The remaining six cells show instances where the internal and external case diff
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
-  \caption {Case competition in Gothic headless relatives}
+  \caption {Summary Gothic headless relatives}
     \input{tables/gothic-grammaticality.tex}
     \label{tbl:summary-gothic}
 \end{table}
 
-The three instances in the lower left corner correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}. In the attested examples, the relative pronoun appears in the internal case.
-The three instances in the upper right corner correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}. In the attested examples, the relative pronoun appears in the external case.
+Table \ref{tbl:summary-gothic} can be simplified a step further as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into two set: a set of three instances in the lower left corner and a set of three instances in the upper right corner.
+In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
+In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
-  \caption {Summary of Gothic matching headless relative data}
+  \caption {Simplified summary Gothic headless relatives}
     \input{tables/gothic-summary.tex}
-    \label{tbl:summary-gothic-1}
+    \label{tbl:summary-gothic-simple}
 \end{table}
 
 To sum up, case competition in headless relative is subject to the case scale, repeated in \ref{ex:case-scale-rep}.
@@ -127,11 +124,10 @@ To sum up, case competition in headless relative is subject to the case scale, r
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-rep}
 
 If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German, \citealt{grosu2003} for Ancient Greek and \citealt{daskalaki2011} for Modern Greek).\footnote{
-These languages differ from Gothic in that they are subject to an additional constraint. That is, they only allow either the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical.
-Old High German is an example of a language that only allows the external case to win the case competition. If the internal case is more to the right on the case scale, the headless relative is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
-This topic is the main focus of Part \ref{part:complexity} of this dissertation.}
+Some of these languages differ from Gothic in that they are subject to an additional constraint. That is, they not allow both the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
+This topic is the main focus of Part \ref{part:direction} of this dissertation.}
 
-In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
+In the remainder of this chapter I show that headless relatives are not the only place where the case scale appears. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
 
 
 \section{In syntax}\label{sec:impl-hier}
@@ -143,7 +139,7 @@ In this section I discuss two additional syntactic phenomena that reflect the \a
 
 Agreement can be seen as ``a systematic covariance between a semantic or formal property of one element and a formal property of another'' \citep{steel1978}. Put differently, the shape of one element changes according to some properties of an element it relates to. In this section I discuss the agreement between a predicate and its arguments.
 
-It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is an implicational hierarchy that is identical to the one observed for headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
+It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is an implicational hierarchy that is identical to the one observed for headless relatives: \ac{nom} < \ac{acc} < \ac{dat}. First I formulate the implicational hierarchy in terms of grammatical function (following \citealt{moravcsik1978}). Later I show that a reformulation in terms of case is actually more accurate (following \citealt{bobaljik2006}).
 
 \citet{moravcsik1978} formulated the implicational hierarchy in terms of grammatical functions subject, direct object and indirect object.\footnote{
 \citet{moravcsik1978} also included adverbs on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
@@ -161,13 +157,13 @@ The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It
     \node[] at (0,1.5) {direct object};
     \node[align=center] at (0,0) {indirect\\ object};
   \end{tikzpicture}
-  \caption{\posscitealt{moravcsik1978} schema}
+  \caption{Agreement hierarchy (grammatical function) \citep{moravcsik1978}}
   \label{fig:agr-sub-do-io}
 \end{figure}
 
 Then, there are four types of languages possible: first, a language that does not show any agreement; second, a language that shows agreement only with the subject and not with the direct and indirect object; third, a language that shows agreement with the subject and direct object but not with the indirect object; and fourth, a language that shows agreement with the subject, the direct object and the indirect object.
 
-The implicational hierarchy holds for languages, not for sentences. That is, it is not the case that in a language of a particular type all instances of the grammatical function show agreement. To be more precise, in a language of the second type, that only shows agreement with the subject, not all subjects have to show agreement. Particular types of subject, such as experiencer subjects often do not show any agreement.
+The implicational hierarchy holds for languages, not for sentences. That is, it is not the case that in a language of a particular type all instances of the grammatical function show agreement. To be more precise, in a language of the second type that only shows agreement with the subject, not all subjects have to show agreement. Particular types of subject, such as experiencer subjects often do not show any agreement.
 
 Japanese is an example of a language that does not show any agreement on the predicate. An example is given in \ref{ex:japanese-agr}. The predicate \tit{okutta} `sent' does not agree with the subject \tit{Tarooga} `Taro', with the direct object \tit{nimotuo} `package' or with the indirect object \tit{Hanakoni} `Hanako'.
 
@@ -211,7 +207,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
      \node[] at (2,1) {\footnotesize{● Hungarian}};
      \node[] at (1.375,0) {\footnotesize{● Basque}};
    \end{tikzpicture}
-   \caption{\posscitealt{moravcsik1978} schema with languages}
+   \caption{Agreement hierarchy with languages \citep{moravcsik1978}}
    \label{fig:agr-sub-do-io-lang}
  \end{figure}
 
@@ -219,7 +215,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
 
  \begin{table}[ht]
    \center
-   \caption {Agreement accessibility}
+   \caption {Typological picture for agreement hierarchy \citep{gilligan1987}}
      \begin{tabular}[t]{ccccc}
        \toprule
            \multicolumn{3}{c}{agreement with} &              &         \\
@@ -306,7 +302,7 @@ Note here that nominative-accusative languages use the same case marking for the
     \node[] at (2,1) {\footnotesize{● Hungarian}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
-  \caption{\posscitealt{bobaljik2006} actual schema}
+  \caption{Agreement hierarchy (case) \citep{bobaljik2006}}
   \label{fig:agr-def-dep-dat}
 \end{figure}
 
@@ -330,7 +326,7 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,0) {\ac{dat}};
   \end{tikzpicture}
   \label{fig:agr-nom-acc-dat}
-  \caption{\posscitealt{bobaljik2006} simplified schema}
+  \caption{Agreement hierarchy (case)}
 \end{figure}
 
 In sum, this section has shown that agreement follows the same implicational hierarchy as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
@@ -366,7 +362,7 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rel-
     \node[] at (2,1) {\footnotesize{● Malay}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
-  \caption{Schema for relativization}
+  \caption{Relativization hierarchy (grammatical function)}
   \label{fig:rel-sub-do-io}
 \end{figure}
 
@@ -470,6 +466,25 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}, my boldfacing}\label{ex:basque-io}
 
+ \begin{figure}[ht]
+   \centering
+   \begin{tikzpicture}
+     \draw (0,1) circle (2.25);
+     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
+     \draw [fill opacity=0.4, fill=DG] (0,0) circle (1.25);
+
+     \node[] at (0,2.75) {subject};
+     \node[] at (0,1.5) {direct object};
+     \node[align=center] at (0,0) {indirect\\ object};
+
+     \node[] at (2.25,2) {\footnotesize{● Malagasy/German}};
+     \node[] at (2,1) {\footnotesize{● Malay}};
+     \node[] at (1.375,0) {\footnotesize{● Basque}};
+   \end{tikzpicture}
+   \caption{Relativization hierarchy with languages}
+   \label{fig:rel-sub-do-io}
+ \end{figure}
+
 \citet{caha2009} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. The main argument comes from ergative-absolutive languages, which was also one of \posscitet{bobaljik2006} argument with the implicational hierarchy for agreement. \citet{keenan1977} point out that some ergative-absolutive languages form a counterexample to their hierarchy. \citet{caha2009} points out that ergative subjects and oblique noun phrases use the same relativization strategy, which is not allowed with absolutive objects (which is also briefly mentioned in
 \citealt{bobaljik2006}).
 
@@ -490,7 +505,7 @@ Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammat
     \node[] at (2,1) {\footnotesize{● Malay}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
-  \caption{Schema for relativization}
+  \caption{Relativization hierarchy (case)}
   \label{fig:rel-def-dep-dat}
 \end{figure}
 
@@ -513,7 +528,7 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,1.5) {accusative};
     \node[align=center] at (0,0) {dative};
   \end{tikzpicture}
-  \caption{Schema for relativization}
+  \caption{Relativization hierarchy (case)}
   \label{fig:rel-nom-acc-dat}
 \end{figure}
 
@@ -522,9 +537,9 @@ In sum, this section has shown that relativization follows the same implicationa
 
 \section{In morphology}\label{sec:case-morphology}
 
-In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it shows up in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
+In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it appears in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
 
-In this section, I show that this same case scale also shows up in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
+In this section, I show that this same case scale can be observed in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
 
 
 \subsection{Syncretism}
@@ -599,7 +614,7 @@ Case competition in headless relatives adheres to the case scale in \ref{ex:case
 This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two syntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
 The second implicational hierarchy concerns relativization. If a dative in a language can be relativized with a particular strategy, an accusative and a nominative can be too using the same strategy. If an accusative can be relativized with a particular strategy, so can a nominative with this strategy.
 
-The case scale also shows up in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
+The case scale can also be observed in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
 
 These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across different phenomena. Therefore, it should not be treated as an special process with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
