--- a/tables/gothic-grammaticality.tex
+++ b/tables/gothic-grammaticality.tex
@@ -8,7 +8,7 @@
         & [\ac{dat}]
         \\ \cmidrule{1-4}
     [\ac{nom}]
-        & 
+        &
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
         \\ \cmidrule{1-4}
@@ -19,7 +19,7 @@
         \\ \cmidrule{1-4}
     [\ac{dat}]
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{nom}}
-        & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{acc}}
+        & \diagbox[linecolor=white]{\colorbox{LG}{(\ac{dat})}}{*\ac{acc}}
         &
         \\
   \bottomrule
