--- a/tables/gothic-summary.tex
+++ b/tables/gothic-summary.tex
@@ -19,7 +19,7 @@
         \\ \cmidrule{1-4}
     [\ac{dat}]
         & \ac{dat}
-        & \ac{dat}
+        & (\ac{dat})
         &
         \\
   \bottomrule
